# TAU

./: .gitignore  README.md  pom.xml
Kredki/: pom.xml
Kredki/src/main/java/Kredki/: App.java
Kredki/src/test/java/Kredki/: AppTest.java
TAU4/: Mój test plan.jmx  Mój test plan2.jmx  Test_Plan_2_15583_Grzegorz_Zukowski.jmx  pom.xml
TAU4/DATACSV/: Rezultat.csv  Rezultat2.csv  Rezultat3.csv  data.csv
TAU4/src/main/java/pl/tau/restdemo/web/: PersonApi.java
TAU4/src/test/java/pl/tau/restdemo/service/: PersonManagerTest.java
TAU5/src/main/java/: SeleniumFirstTest.java
TAU5/src/test/java/: TestSeleniumAutomationpractice.java
TAU7/: CMakeLists.txt
TAU7/Test/: BDDTest.cpp  UnitTest.cpp
TAU7/source/: DataBase.cpp  DataBase.h  Iterator.cpp  Iterator.h  Kredka.cpp  Kredka.h
TAUlab1/: pom.xml
TAUlab1/src/test/java/pl/zukowski/tau/labone/: KredkaRepositoryTest.java
TAUlab1/src/test/java/pl/zukowski/tau/labthree/: BuyingKredka.feature  BuyingKredka.java  NewKredka.feature  NewKredka.java
TAUlab1/src/test/java/pl/zukowski/tau/labtwo/: KredkaTimeMarkTest.java
src/main/java/Kredki/: Kredki.java
src/main/java/pl/zukowski/tau/labone/domain/: Kredka.java  Kredki.java  (+2 more)
src/test/java/Kredki/: KredkiTest.java
src/test/java/pl/zukowski/tau/labone/: KredkaRepositoryTest.java  KredkaTest.java  KredkiTest.java
src/test/java/pl/zukowski/tau/labthree/: BuyingKredka.feature  BuyingKredka.java  ColourOfKredka.feature  NewKredka.feature  NewKredka.java  Stepdefs.java
src/test/java/pl/zukowski/tau/labtwo/: KredkaWithDatesTest.java  KredkiRepositoryWithDatesTest.java
(+5 files in other folders)
